// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Successfully retrieve block boundaries controlTest 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 0,
    "text": "",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 0,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 2,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 8,
    "text": ")",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 10,
    "text": ")",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 12,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 18,
    "text": ")",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 19,
    "text": "
	",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 35,
    "text": "
		",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 60,
    "text": "
",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 60,
    "text": "
",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 79,
    "text": "",
  },
]
`;

exports[`Successfully retrieve block boundaries emptyLineAtStartOrEnd 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 0,
    "text": "
	",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 5,
    "text": "
		",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 22,
    "text": "
			",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 49,
    "text": "",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 49,
    "text": "",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 49,
    "text": "",
  },
]
`;

exports[`Successfully retrieve block boundaries indentedBraces 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 0,
    "text": "",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 3,
    "text": "
	",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 5,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 11,
    "text": ")",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 12,
    "text": "
",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 30,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 38,
    "text": ")",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 39,
    "text": "",
  },
]
`;

exports[`Successfully retrieve block boundaries multilineBracedBlock 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 0,
    "text": "",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 0,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 2,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 8,
    "text": ")",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 28,
    "text": ")",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 29,
    "text": "
	",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 45,
    "text": "",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 45,
    "text": "",
  },
]
`;

exports[`Successfully retrieve block boundaries multilineBracedBlock2 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 0,
    "text": "",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 0,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 2,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 8,
    "text": ")",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 28,
    "text": ")",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 29,
    "text": "
	",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 45,
    "text": "",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 45,
    "text": "",
  },
]
`;

exports[`Successfully retrieve block boundaries multilineBracedBlock3 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "delimiterType": "start",
    "offset": 0,
    "text": "",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 0,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "start",
    "offset": 2,
    "text": "(",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 8,
    "text": ")",
  },
  Object {
    "blockType": "Braces",
    "delimiterType": "end",
    "offset": 28,
    "text": ")",
  },
  Object {
    "blockType": "Indent",
    "delimiterType": "end",
    "offset": 46,
    "text": "",
  },
]
`;
